<?xml version="1.0" encoding="utf-8"?>
<!-- 
 JapaneseDictionary - an JMDict browser for Android
 Copyright (C) 2013 Jaroslav Klech
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.
 
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
    <string name="app_name">Japanese dictionary</string>
    <string name="title_activity_main">Japanese dictionary</string>
    
    <!-- ParserService -->
    <string name="dictionary_download_title">Downloading japanese dictionary</string>
    <string name="dictionary_download_in_progress">Download in progress</string>
    <string name="dictionary_kanji_download_title">Downloading kanji dictionary</string>
    <string name="dictionary_download_complete">Download complete</string>
    <string name="dictionary_parsing_in_progress">Parsing file in progress.</string>
    <string name="dictionary_parsing_in_progress_time_left">Parsing file in progress. Time left: t_l min.</string>
    <string name="dictionary_download_interrupted">Downloading interrupted</string>
    
    <!-- MainActivity -->
    <string name="parsing_downloaded_dictionary">Parsing downloaded dictionaries</string>
    <string name="no_dictionary_found">No dictionary found</string>
    <string name="nothing_found">Nothing found</string>
    <string name="download_dictionary_question">Do you want to download dictionary? \nInternet connection required.\nSize: 12 MB</string>
    <string name="download">Download</string>
    <string name="storno">Cancel</string>
    <string name="save">Save</string>
    <string name="currently_downloading_dictionary">Currently downloading dictionary please wait</string>
    <string name="internet_connection_failed_title">Internet connection failed</string>
    <string name="internet_connection_failed_message">Internet connecton is not available</string>
    <string name="external_storrage_failed_title">External storrage unavailable</string>
    <string name="external_storrage_failed_message">External storrage is not available</string>  
    <string name="search_translation">Search translation</string>
    <string name="updating_in_progress">Updating dictionary in progress, please wait</string>
    <string name="unknown_last_update">Last update unknown</string>
    <string name="last_update">Last update: </string>
    <string name="actionbar_search">Search</string>
    <string name="last_seen">Last seen</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>


    <!-- Menu -->
    <string name="anki_card">Add translation to AnkiDroid</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_favorite_activity">Show favorites</string>
    <string name="menu_note">Add note</string>
    <string name="menu_setting">Settings</string>


    <!-- Favorite -->
    <string name="favorite_title">Favorite</string>

    <!-- History -->
    <string name="history_title">History</string>

    <!-- Languages -->
    <string name="language_english">English</string>
    <string name="language_french">French</string>
    <string name="language_dutch">Dutch</string>
    <string name="language_german">German</string>  
    
    <!--  Preferences -->
    <string name="preferences_language_setting">Language settings</string>
    <string name="preferences_english_do">Translate English</string>
    <string name="preferences_english_dont">Do not translate English</string>
    <string name="preferences_french_do">Translate French</string>
    <string name="preferences_french_dont">Do not translate French</string>
    <string name="preferences_dutch_do">Translate Dutch</string>
    <string name="preferences_dutch_dont">Do not translate Dutch</string>
    <string name="preferences_german_do">Translate German</string>
    <string name="preferences_german_dont">Do not translate German</string>
    <string name="preferences_dictionary_info">Dictionary info</string>
 	<string name="preferences_update_dictionary">Update dictionary</string>
 	<string name="preferences_dictionary_info">No dictionary found</string>
 	<string name="preferences">Preferences</string>
    <string name="preferences_search_setting">Search setting</string>
    <string name="preferences_search_only_favorite">Search only common words</string>
    <string name="preferences_favorite_do">Search only common</string>
    <string name="preferences_favorite_dont">Search all words</string>

   <!-- Tabs -->
   <string name="search_exact">Exact</string>
   <string name="search_beginning">Begins</string>
   <string name="search_middle">Contains</string>
   <string name="search_end">Ends</string>
   
   
   <!-- Display Translation -->
   <string name="translation_select_translation">Select translation</string>
   <string name="translation_title">Entry detail</string>
   <string name="translation_romaji">Romaji</string>
   <string name="translation_alternative">Alternative</string>
   <string name="translation_translation">Translation</string>
   <string name="translation_kanji">Kanji</string>
   <string name="translation_kanji_no_meaning">No known meaning in selected language</string>
   <string name="translation_note">Note</string>
   <string name="anki_not_found">AnkiDroid application is not installed. Install AnkiDroid now?</string>
    <string name="anki_required">AnkiDroid is required</string>


   <!-- Display character info -->
   <string name="character_unknown_character">Unknown character</string>
   <string name="character_title">Character detail</string>
   <string name="kanjidict_radical_text">Radical</string>
   <string name="kanjidict_grade_text">Grade</string>   
   <string name="kanjidict_stroke_count_text">Stroke count</string>   
   <string name="kanjidict_dictionaries">Dictionary references</string>  
   <string name="kanjidict_skip_text">SKIP</string>  
   <string name="kanjidict_nanori_text">Nanori</string>  
   <string name="kanjidict_meanings">Meanings</string>  
   <string name="kanjidict_onyomi_text">Onyomi</string>  
   <string name="kanjidict_kunyomi_text">Kunyomi</string>  
   
   <!--About -->
   <string name="about_title">About</string>
   <string name="about_unknown">unknown</string>
   <string name="about_version">Version:  </string>
   <string name="about_creator">Created by: </string>
   <string name="about_dictionary">This application uses the JMDict and KANJIDIC2 dictionary files. These files are the property of the Electronic Dictionary Research and Development Group, and are used in conformance with the Group\'s licence. </string>



<!-- Label for the "Done" button on the far left of action mode toolbars. -->
<string name="abc_action_mode_done">Done</string>
<!-- Content description for the action bar "home" affordance. [CHAR LIMIT=NONE] -->
<string name="abc_action_bar_home_description">Navigate home</string>
<!-- Content description for the action bar "up" affordance. [CHAR LIMIT=NONE] -->
<string name="abc_action_bar_up_description">Navigate up</string>
<!-- Content description for the action menu overflow button. [CHAR LIMIT=NONE] -->
<string name="abc_action_menu_overflow_description">More options</string>
<!-- SearchView accessibility description for search button [CHAR LIMIT=NONE] -->
<string name="abc_searchview_description_search">Search</string>
<!-- SearchView accessibility description for search text field [CHAR LIMIT=NONE] -->
<string name="abc_searchview_description_query">Search query</string>
<!-- SearchView accessibility description for clear button [CHAR LIMIT=NONE] -->
<string name="abc_searchview_description_clear">Clear query</string>
<!-- SearchView accessibility description for submit button [CHAR LIMIT=NONE] -->
<string name="abc_searchview_description_submit">Submit query</string>
<!-- SearchView accessibility description for voice button [CHAR LIMIT=NONE] -->
<string name="abc_searchview_description_voice">Voice search</string>
<!-- ActivityChooserView - accessibility support -->

<!-- Description of the shwoing of a popup window with activities to choose from. [CHAR LIMIT=NONE] -->
<string name="abc_activitychooserview_choose_application">Choose an app</string>
<!-- Title for a button to expand the list of activities in ActivityChooserView [CHAR LIMIT=25] -->
<string name="abc_activity_chooser_view_see_all">See all</string>
<!-- Description of a share target (both in the list of such or the default share button) in a ShareActionProvider (share UI). [CHAR LIMIT=NONE] -->
<string name="abc_shareactionprovider_share_with_application">Share with %s</string>
<!-- Description of the choose target button in a ShareActionProvider (share UI). [CHAR LIMIT=NONE] -->
<string name="abc_shareactionprovider_share_with">Share with</string>
</resources>
