<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="Language setting">


        <CheckBoxPreference
                android:key="language_english"
                android:title="@string/language_english"
                android:summaryOff="@string/preferences_english_dont"
                android:summaryOn="@string/preferences_english_do"
                />
        <CheckBoxPreference
                android:key="language_french"
                android:title="@string/language_french"
                android:summaryOff="@string/preferences_french_dont"
                android:summaryOn="@string/preferences_french_do"
                />
        <CheckBoxPreference
                android:key="language_dutch"
                android:title="@string/language_dutch"
                android:summaryOff="@string/preferences_dutch_dont"
                android:summaryOn="@string/preferences_dutch_do"
                />
        <CheckBoxPreference
                android:key="language_german"
                android:title="@string/language_german"
                android:summaryOff="@string/preferences_german_dont"
                android:summaryOn="@string/preferences_german_do"
                />
    </PreferenceCategory>
	<PreferenceCategory
	    android:title="Dictionary info">
	 	
       <PreferenceScreen
           android:key="update_dictionary"
           android:title="@string/preferences_update_dictionary"
           android:summary="@string/preferences_dictionary_info"
            />
	 	
	</PreferenceCategory>

</PreferenceScreen>