<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/preferences_language_setting"
		    android:textIsSelectable="true"
		    android:paddingLeft="5pt"
		    android:textSize="20sp" />
		<CheckBox
		    android:id="@+id/setting_language_english_check"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/language_english" 
 			android:checked="false"
 			android:onClick="onCheckBoxClicked"
		    />

		<TextView
		    android:id="@+id/setting_language_english_title"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/preferences_english_dont"
		    android:textIsSelectable="true"
		    android:paddingLeft="10pt"
		    android:textSize="15sp" />
		<ImageView
		    android:src="@android:drawable/divider_horizontal_dark"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:scaleType="fitXY"
		    android:paddingLeft="5dp"
		    android:paddingRight="5dp"
		    android:paddingBottom="2dp"
		    android:paddingTop="2dp" 
		    android:contentDescription="@string/line"
		    />
		
		<CheckBox
		    android:id="@+id/setting_language_french_check"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/language_french" 
 			android:checked="false"
 			android:onClick="onCheckBoxClicked"
		    />

		<TextView
		    android:id="@+id/setting_language_french_title"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/preferences_french_dont"
		    android:textIsSelectable="true"
		    android:paddingLeft="10pt"
		    android:textSize="15sp" />
		<ImageView
		    android:src="@android:drawable/divider_horizontal_dark"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:scaleType="fitXY"
		    android:paddingLeft="5dp"
		    android:paddingRight="5dp"
		    android:paddingBottom="2dp"
		    android:paddingTop="2dp" 
		    android:contentDescription="@string/line"
		    />
		
		<CheckBox
		    android:id="@+id/setting_language_dutch_check"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/language_dutch" 
 			android:checked="false"
 			android:onClick="onCheckBoxClicked"
		    />

		<TextView
		    android:id="@+id/setting_language_dutch_title"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/preferences_dutch_dont"
		    android:textIsSelectable="true"
		    android:paddingLeft="10pt"
		    android:textSize="15sp" />
		<ImageView
		    android:src="@android:drawable/divider_horizontal_dark"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:scaleType="fitXY"
		    android:paddingLeft="5dp"
		    android:paddingRight="5dp"
		    android:paddingBottom="2dp"
		    android:paddingTop="2dp" 
		    android:contentDescription="@string/line"
		    />
		
		
		<CheckBox
		    android:id="@+id/setting_language_german_check"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/language_german" 
 			android:checked="false"
 			android:onClick="onCheckBoxClicked"
		    />

		<TextView
		    android:id="@+id/setting_language_german_title"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/preferences_german_dont"
		    android:textIsSelectable="true"
		    android:paddingLeft="10pt"
		    android:textSize="15sp" />
		<ImageView
		    android:src="@android:drawable/divider_horizontal_dark"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:scaleType="fitXY"
		    android:paddingLeft="5dp"
		    android:paddingRight="5dp"
		    android:paddingBottom="2dp"
		    android:paddingTop="2dp" 
		    android:contentDescription="@string/line"
		    />
		
</LinearLayout>