<?xml version="1.0" encoding="utf-8"?>
<!-- 
 JapaneseDictionary - an JMDict browser for Android
 Copyright (C) 2013 Jaroslav Klech
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.
 
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:japanesedictionary ="http://schemas.android.com/apk/res-auto">
    <item
            android:title="@string/menu_favorite"
            japanesedictionary:showAsAction="ifRoom"
            android:id="@+id/favorite"
            android:icon="@drawable/rating_not_important"
            android:enabled="false"
            android:visible="false"
            />
    <item
            android:title="@string/menu_note"
            japanesedictionary:showAsAction="ifRoom"
            android:id="@+id/ab_note"
            android:icon="@drawable/note"
            android:enabled="false"
            android:visible="false"
            />
	<item 
	    android:title="@string/menu_setting"
        japanesedictionary:showAsAction="never"
	    android:id="@+id/settings"
	    android:icon="@android:drawable/ic_menu_preferences"
	    />
	<item 
	    android:title="@string/about_title"
        japanesedictionary:showAsAction="never"
	    android:id="@+id/about"
	    android:icon="@android:drawable/ic_menu_info_details"
	    />
</menu>