<?xml version="1.0" encoding="utf-8"?>	
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_marginTop="5dp">
	<TextView 
	    android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:text="@string/about_version"
		android:layout_weight="1"
		android:gravity="right"	
		android:padding="3dp"    
	    />
	<TextView 
	    android:id="@+id/about_version"
	    android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:text="@string/about_version"
		android:layout_weight="1"
		android:padding="3dp"    	    
	    />
	</LinearLayout>	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_marginTop="5dp"
	    android:layout_marginBottom="5dp"
	    >
	<TextView 
	    android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:text="@string/about_creator"
		android:layout_weight="1"
		android:gravity="right"	
		android:padding="3dp"    
	    />
	<TextView 
	    android:id="@+id/about_name"
	    android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:text="@string/about_version"
		android:layout_weight="1"
		android:padding="3dp"    	    
	    />
	</LinearLayout>	
	<View
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray"/>
	<TextView 
	    android:id="@+id/about_acknowledgment"
	    android:layout_marginTop="5dp"
	    android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/about_dictionary"
		android:linksClickable="true"   
	    />
</LinearLayout>